--- a/analysis/examples/good-run-selection.ipynb
+++ b/analysis/examples/good-run-selection.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
     "    runs\n",
     "WHERE\n",
     "    end_time IS NOT NULL\n",
-    "    tier0_transfer = 1\n",
+    "    AND tier0_transfer = 1\n",
     "    AND GEM = 1\n",
     "    AND CSC = 1\n",
     "    AND DQM = 1\n",
@@ -128,13 +128,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "min_duration = 10 * 60 # 10 min\n",
     "\n",
     "good_run_list = [row['run_number'] for row in oms.execute(sql, (min_duration, )).fetchall()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(good_run_list))\n",
+    "print(good_run_list[0:5])\n",
+    "print(good_run_list[-5:None])"
    ]
   },
   {
@@ -152,17 +163,6 @@
      ]
     }
    ],
-   "source": [
-    "print(len(good_run_list))\n",
-    "print(good_run_list[0:5])\n",
-    "print(good_run_list[-5:None])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
