--- a/analysis/examples/how-to-retrieve-hv-by-run.ipynb
+++ b/analysis/examples/how-to-retrieve-hv-by-run.ipynb
@@ -29,6 +29,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Retrive start and end times by a run number"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -119,12 +126,7 @@
      "text": [
       "run_number=357606\n",
       "start_time=2022-08-17 00:30:05+00:00\n",
-      "end_time=2022-08-17 02:49:56+00:00\n",
-      "duration=8391.0\n",
-      "GEM=1\n",
-      "CSC=1\n",
-      "DQM=1\n",
-      "tier0_transfer=1\n"
+      "end_time=2022-08-17 02:49:56+00:00\n"
      ]
     }
    ],
@@ -133,12 +135,7 @@
     "SELECT\n",
     "    run_number,\n",
     "    start_time,\n",
-    "    end_time,\n",
-    "    duration,\n",
-    "    GEM,\n",
-    "    CSC,\n",
-    "    DQM,\n",
-    "    tier0_transfer\n",
+    "    end_time\n",
     "FROM\n",
     "    runs\n",
     "WHERE\n",
@@ -148,6 +145,13 @@
     "run_number = 357606\n",
     "run_row = oms.execute(query, (run_number, )).fetchone()\n",
     "print_row(run_row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Retrieve all HV records between start time and end time"
    ]
   },
   {
@@ -231,10 +235,45 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "idx= 0: hv=788.0\n",
+      "idx= 1: hv=780.3\n",
+      "idx= 2: hv=762.0\n",
+      "idx= 3: hv=741.9\n",
+      "idx= 4: hv=724.2\n",
+      "idx= 5: hv=704.1\n",
+      "idx= 6: hv=685.6\n",
+      "idx= 7: hv=675.8\n",
+      "idx= 8: hv=678.7\n",
+      "idx= 9: hv=684.8\n",
+      "idx=10: hv=690.9\n",
+      "idx=11: hv=697.0\n",
+      "idx=12: hv=702.6\n",
+      "idx=13: hv=708.7\n",
+      "idx=14: hv=714.8\n",
+      "idx=15: hv=720.3\n",
+      "idx=16: hv=726.4\n",
+      "idx=17: hv=732.5\n",
+      "idx=18: hv=738.0\n",
+      "idx=19: hv=744.1\n",
+      "idx=20: hv=749.6\n",
+      "idx=21: hv=755.8\n",
+      "idx=22: hv=761.2\n",
+      "idx=23: hv=767.4\n",
+      "idx=24: hv=772.9\n",
+      "idx=25: hv=776.5\n",
+      "idx=26: hv=776.8\n"
+     ]
+    }
+   ],
    "source": [
     "hv_list = [row['hv'] for row in hv_row_list]\n",
-    "hv_avg = np.mean(hv_list)"
+    "for idx, hv in enumerate(hv_list):\n",
+    "    print(f'{idx=: >2d}: {hv=:.1f}')"
    ]
   },
   {
@@ -251,8 +290,16 @@
     }
    ],
    "source": [
+    "hv_avg = np.mean(hv_list)\n",
     "print(f'{run_number=:d}: {hv_avg=:.1f}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
