--- a/dqm-reporcessing/notebooks/reprocessing-target.ipynb
+++ b/dqm-reporcessing/notebooks/reprocessing-target.ipynb
@@ -142,10 +142,16 @@
     "FROM\n",
     "    runs\n",
     "WHERE\n",
-    "    GEM = 1\n",
-    "    AND CSC = 1\n",
+    "    end_time IS NOT NULL\n",
     "    AND tier0_transfer = 1\n",
+    "    AND GEM = 1\n",
+    "    AND CSC = 1\n",
+    "    AND DQM = 1\n",
+    "    AND DAQ = 1\n",
+    "    AND duration > ?\n",
     "\"\"\"\n",
+    "\n",
+    "min_duration = 10 * 60 # 10 min\n",
     "\n",
     "good_run_data = {row['run_number']: row for row in connection.execute(sql).fetchall()}"
    ]
